--- a/src/docker/app/html/index.html
+++ b/src/docker/app/html/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My application</title>
+    <title>Klassisches Mühle Spiel</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 style="justify-content: center; text-align: center; font-family: 'Courier New', Courier, monospace;">Hello Industrial Edge community! &#128516</h1>
+    <h1>Klassisches Mühle Spiel</h1>
+    <div id="gameStatus">Spieler 1 ist am Zug</div>
+    <div class="board" id="board">
+        <svg id="lines"></svg>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
