--- a/src/docker/app/html/index.html
+++ b/src/docker/app/html/index.html
@@ -13,6 +13,6 @@
         <svg id="lines"></svg>
     </div>
     <script src="script.js"></script>
-    <img src="src/docker/app/html/LettyBild.jpeg" alt="Neko">
+    <!--img src="src/docker/app/html/LettyBild.jpeg" alt="Neko"-->
 </body>
 </html>
